--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ cover/
 # Translations
 *.mo
 *.pot
+*.env
+.env
 
 # Django stuff:
 *.log
@@ -158,4 +160,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
-config.py
+app/config.py
